2nd day task completed

--- a/page-contact.html
+++ b/page-contact.html
@@ -106,46 +106,26 @@
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="aboutus.html">About Us </a></li>
-                            <li class="dropdown yamm-fw yamm-half"><a href="#" data-toggle="dropdown" class="dropdown-toggle active">Mega Menu <b class="fa fa-angle-down"></b></a>
+                            <li><a href="aboutus.html">About Us</a></li>
+                            <li class="dropdown yamm-fw yamm-half"><a href="#" data-toggle="dropdown" class="dropdown-toggle active">Services <b class="fa fa-angle-down"></b></a>
                                 <ul class="dropdown-menu">
                                     <li>
                                         <div class="yamm-content clearfix">
                                             <div class="row-fluid">
-                                                <div class="col-md-6 col-sm-6">
-                                                    <h4>Course Pages</h4>
-                                                    <ul>
-                                                        <li><a href="#">Courses Name 01</a></li>
-                                                        <li><a href="#">Courses Name 02</a></li>
-                                                        <li><a href="#">Courses Name 03</a></li>
-                                                        <li><a href="#">Courses Name 04</a></li>
-                                                        <li><a href="#">Courses Name 05</a></li>
-                                                        <li><a href="#">Courses Name 06</a></li>
-                                                        <li><a href="#">Courses Name 07</a></li>
-                                                        <li><a href="#">Courses Name 08</a></li>
-                                                        <li><a href="#">Courses Name 09</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="col-md-6 col-sm-6">
-                                                    <div class="menu-widget text-center">
-                                                        <div class="image-wrap entry">
-                                                            <img src="upload/course_01.jpg" alt="" class="img-responsive">
-                                                            <div class="magnifier">
-                                                                 <a href="#" title=""><i class="flaticon-add"></i></a>
-                                                            </div>
-                                                        </div><!-- end image-wrap -->
-                                                        <h5><a href="#">Learning Bootstrap Framework</a></h5>
-                                                        <small>$22.00</small>
-                                                        <a href="#" class="menu-button">View Course</a>
-                                                    </div><!-- end widget -->
-                                                </div>
+                                                <ul>
+                                                    <li><a href="services.html">Project Development</a></li>
+                                                    <li><a href="workshop.html">Workshop</a></li>
+                                                    <li><a href="internship.html">Internship</a></li>
+                                                    <li><a href="certifications.html">Certification</a></li>
+                                                    <li><a href="tutorials.html">Tutorials</a></li>
+                                                </ul>
                                             </div>
                                         </div>
                                     </li>
                                 </ul>
                             </li>
                             
-                            <li class="dropdown hassubmenu">
+                            <!-- <li class="dropdown hassubmenu">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Shop <span class="fa fa-angle-down"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="shop.html">Shop Layout</a></li>
@@ -161,7 +141,8 @@
                                     <li><a href="blog-3.html">Blog Grid Fullwidth</a></li>
                                     <li><a href="blog-single.html">Blog Single</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
+                            <li><a href="index.html#our-works-home-pg">Our Works</a></li>
                             <li><a href="page-contact.html">Contact</a></li>
                             <!-- <li class="iconitem"><a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-search"></i></a></li>
                             <li class="iconitem"><a class="shopicon" href="shop-cart.html"><i class="fa fa-shopping-basket"></i> &nbsp;(0)</a></li> -->
@@ -249,7 +230,7 @@
             </div>
         </section>
 
-<footer class="section footer noover">
+        <footer class="section footer noover">
             <div class="container">
                 <div class="row">
                     
@@ -284,15 +265,15 @@
 
                     <div class="col-lg-4 col-md-4">
                         <div class="widget clearfix">
-                            <h3 class="widget-title">Support</h3>
+                            <h3 class="widget-title">Useful Links</h3>
                             <div class="list-widget">   
                                 <ul>
-                                    <li><a href="#">Terms of Use</a></li>
-                                    <li><a href="#">Copyrights</a></li>
-                                    <li><a href="#">Create a Ticket</a></li>
-                                    <li><a href="#">Pricing & Plans</a></li>
-                                    <li><a href="#">Carrier</a></li>
-                                    <li><a href="#">Trademark</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="workshop.html">Workshop</a></li>
+                                    <li><a href="internship.html">Internship</a></li>
+                                    <li><a href="tutorials.html">Tutorials</a></li>
+                                    <li><a href="page-contact.html">Get In Touch</a></li>
                                 </ul>
                             </div><!-- end list-widget -->
                         </div><!-- end widget -->
@@ -324,15 +305,16 @@
                 <div class="clearfix">
                     <div class="pull-left">
                         <div class="cop-logo">
-                            <a href="#"><img src="images/logo.png" alt=""></a>
+                            <a href="index.html"><img src="images/logo.png" alt=""></a>
                         </div>
                     </div>
 
                     <div class="pull-right">
                         <div class="footer-links">
                             <ul class="list-inline">
-                                <li>Design : <a href="https://html.design">HTML.Design</a></li>
-                                <li>Distributed by : <a href="https://themewagon.com/" target="_blank">ThemeWagon</a></li>
+                                <!-- <li>Design : <a href="https://destovtech.tk" target="_blank">Destov Tech</a></li> -->
+                                <!-- <li>Distributed by : <a href="https://themewagon.com/" target="_blank">ThemeWagon</a></li> -->
+                                <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All Right Reserved <br> Designed and Developed  by <a href="https://destovtech.tk" target="_blank" style="color: #fff;">Destov Tech</a></p>
                             </ul>
                         </div>
                     </div>
