--- a/tutorials.html
+++ b/tutorials.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <!-- Site Meta -->
-    <title>Certification - Spark Tech</title>
+    <title>Tutorials - Spark Tech</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -158,13 +158,13 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="tagline-message page-title">
-                            <h3>Certification</h3>
+                            <h3>Tutorials</h3>
                         </div>
                     </div><!-- end col -->
                     <div class="col-md-6 text-right">
                         <ul class="breadcrumb">
                             <li><a href="index.html">Spark Tech</a></li>
-                            <li class="active">Certification</li>
+                            <li class="active">Tutorials</li>
                         </ul>
                     </div>
                 </div><!-- end row -->
@@ -221,18 +221,18 @@
 
                         <div class="col-md-6">
                             <div class="shop-desc">
-                                <h3>Certification</h3>
+                                <h3>Tutorials</h3>
                                 <!-- <small>$20.00</small> -->
                                 <p>Spark Tech conducts workshop to explore the knowledge and our aim is to enhance the interest of the students in the era of technology
                                 Our Experts will ensure in improving the technical knowledge of each and every student by practical implementations and also using simulated models.
                                 Spark Tech believes in motivating the students which are participating in the workshop by felicitating with certificate and also by providing stipends.</p>
-                                <div class="shop-meta">
+                                <!-- <div class="shop-meta"> -->
                                     <!-- <a href="#" class="btn btn-primary">Enroll Now</a> -->
                                     <!-- <ul class="list-inline">
                                         <li> SKU: product-111</li>
                                         <li>Categories: <a href="#">Bags</a>
                                     </ul> -->
-                                </div><!-- end shop meta -->
+                                <!-- </div>--><!-- end shop meta -->
                             </div><!-- end desc -->
                         </div><!-- end col -->
                     </div><!-- end row -->
@@ -468,7 +468,6 @@
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="assets/venobox/venobox.js"></script>
     <script src="js/custom.js"></script>
-
-
+    
 </body>
 </html>
