--- a/index.html
+++ b/index.html
@@ -107,45 +107,25 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="aboutus.html">About us</a></li>
-                            <li class="dropdown yamm-fw yamm-half"><a href="#" data-toggle="dropdown" class="dropdown-toggle active">Mega Menu <b class="fa fa-angle-down"></b></a>
+                            <li class="dropdown yamm-fw yamm-half"><a href="#" data-toggle="dropdown" class="dropdown-toggle active">Services <b class="fa fa-angle-down"></b></a>
                                 <ul class="dropdown-menu">
                                     <li>
                                         <div class="yamm-content clearfix">
                                             <div class="row-fluid">
-                                                <div class="col-md-6 col-sm-6">
-                                                    <h4>Course Pages</h4>
-                                                    <ul>
-                                                        <li><a href="#">Courses Name 01</a></li>
-                                                        <li><a href="#">Courses Name 02</a></li>
-                                                        <li><a href="#">Courses Name 03</a></li>
-                                                        <li><a href="#">Courses Name 04</a></li>
-                                                        <li><a href="#">Courses Name 05</a></li>
-                                                        <li><a href="#">Courses Name 06</a></li>
-                                                        <li><a href="#">Courses Name 07</a></li>
-                                                        <li><a href="#">Courses Name 08</a></li>
-                                                        <li><a href="#">Courses Name 09</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="col-md-6 col-sm-6">
-                                                    <div class="menu-widget text-center">
-                                                        <div class="image-wrap entry">
-                                                            <img src="upload/course_01.jpg" alt="" class="img-responsive">
-                                                            <div class="magnifier">
-                                                                 <a href="#" title=""><i class="flaticon-add"></i></a>
-                                                            </div>
-                                                        </div><!-- end image-wrap -->
-                                                        <h5><a href="#">Learning Bootstrap Framework</a></h5>
-                                                        <small>$22.00</small>
-                                                        <a href="#" class="menu-button">View Course</a>
-                                                    </div><!-- end widget -->
-                                                </div>
+                                                <ul>
+                                                    <li><a href="services.html">Project Development</a></li>
+                                                    <li><a href="workshop.html">Workshop</a></li>
+                                                    <li><a href="internship.html">Internship</a></li>
+                                                    <li><a href="certifications.html">Certification</a></li>
+                                                    <li><a href="tutorials.html">Tutorials</a></li>
+                                                </ul>
                                             </div>
                                         </div>
                                     </li>
                                 </ul>
                             </li>
                             
-                            <li class="dropdown hassubmenu">
+                            <!-- <li class="dropdown hassubmenu">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Shop <span class="fa fa-angle-down"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="shop.html">Shop Layout</a></li>
@@ -161,8 +141,9 @@
                                     <li><a href="blog-3.html">Blog Grid Fullwidth</a></li>
                                     <li><a href="blog-single.html">Blog Single</a></li>
                                 </ul>
-                            </li>
-                            <li><a href="page-contact.html">Contact</a></li>
+                            </li> -->
+                            <li><a href="#our-works-home-pg">Our Works</a></li>
+                            <li><a href="page-contact.html">Get In Touch</a></li>
                             <!-- <li class="iconitem"><a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-search"></i></a></li>
                             <li class="iconitem"><a class="shopicon" href="shop-cart.html"><i class="fa fa-shopping-basket"></i> &nbsp;(0)</a></li> -->
                         </ul>
@@ -242,7 +223,7 @@
                             <hr class="invis">
 
                             <div class="btn-wrapper">
-                                <a href="events.html" class="btn btn-primary">Learn More About us</a>
+                                <a href="aboutus.html" class="btn btn-primary">Learn More About us</a>
                             </div>
 
                         </div><!-- end module -->
@@ -336,7 +317,7 @@
                         <img src="upload/people_04.jpeg" alt="service-image" media-simple="true">
                     </div>
                     <div class="card-box">
-                        <a href="#"><h4 class="card-title pb-3 mbr-fonts-style display-7">
+                        <a href="services.html"><h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Project Development
                         </h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
@@ -352,7 +333,7 @@
                         <img src="upload/people_04.jpeg" alt="service-image" media-simple="true">
                     </div>
                     <div class="card-box">
-                        <a href="#"><h4 class="card-title pb-3 mbr-fonts-style display-7">
+                        <a href="internship.html"><h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Internship
                         </h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
@@ -368,12 +349,12 @@
                         <img src="upload/people_04.jpeg" alt="service-image" media-simple="true">
                     </div>
                     <div class="card-box">
-                        <a href="#"><h4 class="card-title pb-3 mbr-fonts-style display-7">
+                        <a href="workshop.html"><h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Workshop
                         </h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Spark Tech conducts workshop to explore the knowledge and our aim is to enhance the interest of the students in the era of technology
-                        </p><br>
+                        </p><br><br>
                     </div>
                 </div>
             </div>
@@ -384,12 +365,12 @@
                         <img src="upload/people_04.jpeg" alt="service-image" media-simple="true">
                     </div>
                     <div class="card-box">
-                        <a href="#"><h4 class="card-title pb-3 mbr-fonts-style display-7">
+                        <a href="certifications.html"><h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Certification
                         </h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Spark Tech to the progress of the students. Students can enroll in the course and get advanced in the course.
-                        </p><br><br>
+                        </p><br><br><br>
                     </div>
                 </div>
             </div>
@@ -399,12 +380,12 @@
                         <img src="upload/people_04.jpeg" alt="service-image" media-simple="true">
                     </div>
                     <div class="card-box">
-                        <a href="#"><h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Classes
+                        <a href="tutorials.html"><h4 class="card-title pb-3 mbr-fonts-style display-7">
+                            Tutorials
                         </h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Spark Tech is here to provide you the best education for your career growth, where you can learn all technical platform courses.
-                        </p><br>
+                        </p><br><br>
                     </div>
                 </div>
             </div>
@@ -453,7 +434,7 @@
 
 
 
-        <section class="section gb">
+        <section class="section gb" id="our-works-home-pg">
             <div class="container">
                 <div class="section-title text-center">
                     <h3>Recent Projects</h3>
@@ -472,7 +453,7 @@
                             <div class="course-details">
                                 <h4>
                                     <small>Project Category</small>
-                                    <a href="shop-single.html" title="">Project Name</a>
+                                    <a href="#" title="">Project Name</a>
                                 </h4>
                                 <p>Description related to the project, a very short description.</p>
                             </div><!-- end details -->
@@ -491,7 +472,7 @@
                             <div class="course-details">
                                 <h4>
                                     <small>Project Category</small>
-                                    <a href="shop-single.html" title="">Project Name</a>
+                                    <a href="#" title="">Project Name</a>
                                 </h4>
                                 <p>Description related to the project, a very short description.</p>
                             </div><!-- end details -->
@@ -510,7 +491,7 @@
                             <div class="course-details">
                                 <h4>
                                     <small>Project Category</small>
-                                    <a href="shop-single.html" title="">Project Name</a>
+                                    <a href="#" title="">Project Name</a>
                                 </h4>
                                 <p>Description related to the project, a very short description.</p>
                             </div><!-- end details -->
@@ -529,7 +510,7 @@
                             <div class="course-details">
                                 <h4>
                                     <small>Project Category</small>
-                                    <a href="shop-single.html" title="">Project Name</a>
+                                    <a href="#" title="">Project Name</a>
                                 </h4>
                                 <p>Description related to the project, a very short description.</p>
                             </div><!-- end details -->
@@ -548,7 +529,7 @@
                             <div class="course-details">
                                 <h4>
                                     <small>Project Category</small>
-                                    <a href="shop-single.html" title="">Project Name</a>
+                                    <a href="#" title="">Project Name</a>
                                 </h4>
                                 <p>Description related to the project, a very short description.</p>
                             </div><!-- end details -->
@@ -571,7 +552,7 @@
 
 
 
-        <section class="section gb nopadtop">
+        <section class="section gb nopadtop" id="contact-us-home-pg">
             <div class="container">
                 <div class="boxed boxedp4">
                     <div class="row contactv2 text-center">
@@ -727,15 +708,15 @@
 
                     <div class="col-lg-4 col-md-4">
                         <div class="widget clearfix">
-                            <h3 class="widget-title">Support</h3>
+                            <h3 class="widget-title">Useful Links</h3>
                             <div class="list-widget">   
                                 <ul>
-                                    <li><a href="#">Terms of Use</a></li>
-                                    <li><a href="#">Copyrights</a></li>
-                                    <li><a href="#">Create a Ticket</a></li>
-                                    <li><a href="#">Pricing & Plans</a></li>
-                                    <li><a href="#">Carrier</a></li>
-                                    <li><a href="#">Trademark</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="workshop.html">Workshop</a></li>
+                                    <li><a href="internship.html">Internship</a></li>
+                                    <li><a href="tutorials.html">Tutorials</a></li>
+                                    <li><a href="page-contact.html">Get In Touch</a></li>
                                 </ul>
                             </div><!-- end list-widget -->
                         </div><!-- end widget -->
@@ -767,15 +748,16 @@
                 <div class="clearfix">
                     <div class="pull-left">
                         <div class="cop-logo">
-                            <a href="#"><img src="images/logo.png" alt=""></a>
+                            <a href="index.html"><img src="images/logo.png" alt=""></a>
                         </div>
                     </div>
 
                     <div class="pull-right">
                         <div class="footer-links">
                             <ul class="list-inline">
-                                <li>Design : <a href="https://html.design">HTML.Design</a></li>
-                                <li>Distributed by : <a href="https://themewagon.com/" target="_blank">ThemeWagon</a></li>
+                                <!-- <li>Design : <a href="https://destovtech.tk" target="_blank">Destov Tech</a></li> -->
+                                <!-- <li>Distributed by : <a href="https://themewagon.com/" target="_blank">ThemeWagon</a></li> -->
+                                <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All Right Reserved <br> Designed and Developed  by <a href="https://destovtech.tk" target="_blank" style="color: #fff;">Destov Tech</a></p>
                             </ul>
                         </div>
                     </div>
