third day task complete

--- a/aboutus.html
+++ b/aboutus.html
@@ -186,7 +186,7 @@
                             Pune. Do beautiful and easy-to-use digital <br>
                             design & web development</h2>
 
-                            <p>"Spark Tech" was Founded in 2016. Our organisation is having Product Architecture, Development and Consulting experience. "Alpha Engineers" as a company had an opportunity to work on and deliver a variety of projects in Embedded System, Digital Signal Processing and Automation Industries. Alpha Engineers is having best development team and is always on the lookout for cutting edge tools and technologies in solving real world problems.</p>
+                            <p>"Spark Tech" was Founded in 2016. Our organisation is having Product Architecture, Development and Consulting experience. "Spark Tech" as a company had an opportunity to work on and deliver a variety of projects in Embedded System, Digital Signal Processing and Automation Industries. Spark Tech is having best development team and is always on the lookout for cutting edge tools and technologies in solving real world problems.</p>
 
                             <hr class="invis">
 
