--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             Pune. Do beautiful and easy-to-use digital <br>
                             design & web development</h2>
 
-                            <p>"Spark Tech" was Founded in 2016. Our organisation is having Product Architecture, Development and Consulting experience. "Alpha Engineers" as a company had an opportunity to work on and deliver a variety of projects in Embedded System, Digital Signal Processing and Automation Industries. Alpha Engineers is having best development team and is always on the lookout for cutting edge tools and technologies in solving real world problems.</p>
+                            <p>"Spark Tech" was Founded in 2016. Our organisation is having Product Architecture, Development and Consulting experience. "Spark Tech" as a company had an opportunity to work on and deliver a variety of projects in Embedded System, Digital Signal Processing and Automation Industries. Spark Tech is having best development team and is always on the lookout for cutting edge tools and technologies in solving real world problems.</p>
 
                             <hr class="invis">
 
@@ -354,7 +354,7 @@
                         </h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Spark Tech conducts workshop to explore the knowledge and our aim is to enhance the interest of the students in the era of technology
-                        </p><br><br>
+                        </p><br>
                     </div>
                 </div>
             </div>
@@ -370,7 +370,7 @@
                         </h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Spark Tech to the progress of the students. Students can enroll in the course and get advanced in the course.
-                        </p><br><br><br>
+                        </p><br><br>
                     </div>
                 </div>
             </div>
@@ -385,7 +385,7 @@
                         </h4></a>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Spark Tech is here to provide you the best education for your career growth, where you can learn all technical platform courses.
-                        </p><br><br>
+                        </p><br>
                     </div>
                 </div>
             </div>
@@ -560,8 +560,8 @@
                             <div class="small-box">
                                 <i class="flaticon-map-with-position-marker wow fadeIn"></i>
                                 <h4>Visit Our Office</h4>
-                                <small>Shop no.3, Sagar Trade Center</small>
-                                <small>Katraj, Pune. 411046</small>
+                                <small>Flat no 191, Sai Samarth Complex</small>
+                                <small>Manaji Nagar, Narhe, Pune.</small>
                                 <!-- <p><a href="#">View on Google Map</a></p> -->
                             </div><!-- end small-box -->
                         </div><!-- end col -->
@@ -570,7 +570,7 @@
                             <div class="small-box">
                                 <i class="flaticon-email wow fadeIn"></i>
                                 <h4>Call us today</h4>
-                                <small>+91 98765 98765</small>
+                                <small>+91 87884 14717</small>
                                 <small>+91 98123 98123</small>
                                 <!-- <p><a href="mail:to">info@yoursite.com</a></p> -->
                             </div><!-- end small-box -->
@@ -580,8 +580,8 @@
                             <div class="small-box">
                                 <i class="flaticon-share wow fadeIn"></i>
                                 <h4>Reach Us at</h4>
-                                <small>sparktech@gmail.com</small>
-                                <small>sparktech2@gmail.com</small>
+                                <small>esparktech.info@gmail.com</small>
+                                <!-- <small>sparktech2@gmail.com</small> -->
                                 <!-- <p><a href="#">Email Newsletter</a></p> -->
                             </div><!-- end small-box -->
                         </div><!-- end col -->
