--- a/services.html
+++ b/services.html
@@ -191,7 +191,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_01.jpg" alt="" class="img-responsive">
+                                    <a href="diploma-projects.html"><img src="upload/shop_01.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -204,26 +204,13 @@
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="diploma-projects.html">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_02.jpg" alt="" class="img-responsive">
+                                    <a href="mini-projects.html"><img src="upload/shop_02.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -236,26 +223,13 @@
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="mini-projects.html">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_03.jpg" alt="" class="img-responsive">
+                                    <a href="BE-projects.html"><img src="upload/shop_03.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -268,26 +242,13 @@
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="BE-projects.html">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_04.jpg" alt="" class="img-responsive">
+                                    <a href="ME-projects.html"><img src="upload/shop_04.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -295,34 +256,21 @@
                                 <!-- end image-wrap -->
                                 <div class="course-details shop-box text-center">
                                     <h4>
-                                        <a href="ME-projects.html" title="">ME / M.Tech</a>
+                                        <a href="ME-projects.html" title="">ME/M.Tech</a>
                                         <!-- <small>T-Shirts</small> -->
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="ME-projects.html">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_05.jpg" alt="" class="img-responsive">
-                                    <div class="magnifier">
+                                    <a href="#"><img src="upload/shop_05.jpg" alt="" class="img-responsive"></a>
+                                    <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <!-- end image-wrap -->
                                 <div class="course-details shop-box text-center">
@@ -332,29 +280,16 @@
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="#">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_06.jpg" alt="" class="img-responsive">
-                                    <div class="magnifier">
+                                    <a href="workshop.html"><img src="upload/shop_06.jpg" alt="" class="img-responsive"></a>
+                                    <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <!-- end image-wrap -->
                                 <div class="course-details shop-box text-center">
@@ -364,29 +299,16 @@
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="workshop.html">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_07.jpg" alt="" class="img-responsive">
-                                    <div class="magnifier">
+                                    <a href="internship.html"><img src="upload/shop_07.jpg" alt="" class="img-responsive"></a>
+                                    <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <!-- end image-wrap -->
                                 <div class="course-details shop-box text-center">
@@ -396,29 +318,16 @@
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="internship.html">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_08.jpg" alt="" class="img-responsive">
-                                    <div class="magnifier">
+                                    <a href="certifications.html"><img src="upload/shop_08.jpg" alt="" class="img-responsive"></a>
+                                    <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <!-- end image-wrap -->
                                 <div class="course-details shop-box text-center">
@@ -428,29 +337,16 @@
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="certifications.html">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <img src="upload/shop_08.jpg" alt="" class="img-responsive">
-                                    <div class="magnifier">
+                                    <a href="tutorials.html"><img src="upload/shop_08.jpg" alt="" class="img-responsive"></a>
+                                    <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <!-- end image-wrap -->
                                 <div class="course-details shop-box text-center">
@@ -460,19 +356,6 @@
                                     </h4>
                                 </div>
                                 <!-- end details -->
-                                <div class="course-footer clearfix">
-                                    <div class="pull-left">
-                                        <ul class="list-inline">
-                                            <!-- <li><a href="#"><i class="fa fa-shopping-basket"></i> Add Cart</a></li> -->
-                                        </ul>
-                                    </div><!-- end left -->
-
-                                    <div class="text-center">
-                                        <ul class="list-inline">
-                                            <li><a href="tutorials.html">Read More</a></li>
-                                        </ul>
-                                    </div><!-- end left -->
-                                </div><!-- end footer -->
                             </div><!-- end box -->
                         </div><!-- end col -->
 
