--- a/BE-projects.html
+++ b/BE-projects.html
@@ -192,7 +192,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="be-robotics-proj.html"><img src="upload/shop_01.jpg" alt="" class="img-responsive"></a>
+                                    <a href="be-robotics-proj.html"><img src="images/img/robotics-2.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -211,7 +211,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="be-iot-proj.html"><img src="upload/shop_02.jpg" alt="" class="img-responsive"></a>
+                                    <a href="be-iot-proj.html"><img src="images/img/iot-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -230,7 +230,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="be-embedded-system-proj.html"><img src="upload/shop_03.jpg" alt="" class="img-responsive"></a>
+                                    <a href="be-embedded-system-proj.html"><img src="images/img/embedded-proj-2.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -268,7 +268,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="be-cloud-computing-proj.html"><img src="upload/shop_05.jpg" alt="" class="img-responsive"></a>
+                                    <a href="be-cloud-computing-proj.html"><img src="images/img/cc-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -307,7 +307,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="be-web-development-proj.html"><img src="upload/shop_08.jpg" alt="" class="img-responsive"></a>
+                                    <a href="be-web-development-proj.html"><img src="images/img/web-dev-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -383,7 +383,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="be-data-mining-proj.html"><img src="upload/shop_08.jpg" alt="" class="img-responsive"></a>
+                                    <a href="be-data-mining-proj.html"><img src="images/img/data-mining-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -434,7 +434,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="box testimonial">
-                            <p class="testiname"><strong><img src="upload/testimonial_01.png" alt="" class="img-circle"> Riddhi Kulkarni</strong></p>
+                            <p class="testiname"><strong><img src="images/img/team-3.jpg" alt="" class="img-circle"> Riddhi Kulkarni</strong></p>
                             <p> At Spark Tech , I have learnt how to code independently whether of Embedded or Software (SQL or JAVA). Time limit in project development is most crucial task. Project Developers at Spark Tech take care of submission of project before time. I have learnt lot of technical skills here.</p><br>
                             <div class="rating">
                                 <i class="fa fa-star"></i>
@@ -448,7 +448,7 @@
 
                     <div class="col-md-4">
                         <div class="box testimonial">
-                            <p class="testiname"><strong><img src="upload/testimonial_02.png" alt="" class="img-circle"> Mrunali Mehta</strong></p>
+                            <p class="testiname"><strong><img src="images/img/team-2.jpg" alt="" class="img-circle"> Mrunali Mehta</strong></p>
                             <p> I am basically from Walchand College, Solapur. Spark Tech is such an amazing company where unique project ideas develop and especially Narendra Sir is very creative and a good developer.He helped and guided me so that i could learn lots of technical things from my project.</p><br>
                             <div class="rating">
                                 <i class="fa fa-star"></i>
@@ -462,7 +462,7 @@
 
                     <div class="col-md-4">
                         <div class="box testimonial">
-                            <p class="testiname"><strong><img src="upload/testimonial_03.png" alt="" class="img-circle"> Hardik Shah</strong></p>
+                            <p class="testiname"><strong><img src="images/img/team-1.jpg" alt="" class="img-circle"> Hardik Shah</strong></p>
                             <p>I have lot of things to say about Spark Tech because its a One Stop Solution for every problem. The most creative and customixe projects comes from here. Spark Tech team seriously believes in Quality. I am from PCCOER college and well my experience is best and learnt lot of good stuffs at Spark Tech.</p>
                             <div class="rating">
                                 <i class="fa fa-star"></i>
