--- a/services.html
+++ b/services.html
@@ -191,7 +191,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="diploma-projects.html"><img src="upload/shop_01.jpg" alt="" class="img-responsive"></a>
+                                    <a href="diploma-projects.html"><img src="images/img/diploma-pro-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -210,7 +210,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="mini-projects.html"><img src="upload/shop_02.jpg" alt="" class="img-responsive"></a>
+                                    <a href="mini-projects.html"><img src="images/img/Mini-Projects.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -229,7 +229,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="BE-projects.html"><img src="upload/shop_03.jpg" alt="" class="img-responsive"></a>
+                                    <a href="BE-projects.html"><img src="images/img/me-mtech-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -248,7 +248,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="ME-projects.html"><img src="upload/shop_04.jpg" alt="" class="img-responsive"></a>
+                                    <a href="ME-projects.html"><img src="images/img/me-mtech-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -267,7 +267,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="#"><img src="upload/shop_05.jpg" alt="" class="img-responsive"></a>
+                                    <a href="#"><img src="images/img/electronics-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -286,7 +286,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="workshop.html"><img src="upload/shop_06.jpg" alt="" class="img-responsive"></a>
+                                    <a href="workshop.html"><img src="images/img/workshop.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -305,7 +305,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="internship.html"><img src="upload/shop_07.jpg" alt="" class="img-responsive"></a>
+                                    <a href="internship.html"><img src="images/img/internship-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -324,7 +324,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="certifications.html"><img src="upload/shop_08.jpg" alt="" class="img-responsive"></a>
+                                    <a href="certifications.html"><img src="images/img/certificate.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
@@ -343,7 +343,7 @@
                         <div class="col-md-4">
                             <div class="course-box shop-wrapper">
                                 <div class="image-wrap entry">
-                                    <a href="tutorials.html"><img src="upload/shop_08.jpg" alt="" class="img-responsive"></a>
+                                    <a href="tutorials.html"><img src="images/img/tutorial-1.jpg" alt="" class="img-responsive"></a>
                                     <!-- <div class="magnifier">
                                         <a href="#" title=""><i class="flaticon-add"></i></a>
                                     </div> -->
