--- a/dp-machine-learning-proj.html
+++ b/dp-machine-learning-proj.html
@@ -180,9 +180,9 @@
                             <div class="row">
                                 <div class="col-md-12">
                                 <div class="image-wrap entry">
-                                    <img src="upload/single_shop_01.jpg" alt="" class="img-responsive">
+                                    <img src="images/img/machine-learning-1.jpeg" alt="" class="img-responsive">
                                     <div class="magnifier">
-                                        <a rel="prettyPhoto[inline]" href="upload/single_shop_01.jpg" title=""><i class="flaticon-add"></i></a>
+                                        <a rel="prettyPhoto[inline]" href="images/img/machine-learning-1.jpeg" title=""><i class="flaticon-add"></i></a>
                                     </div>
                                 </div><!-- end image-wrap -->
                                 </div>
@@ -190,34 +190,7 @@
 
                             <hr class="invis">
 
-                            <div class="row">
-                                <div class="col-md-4 col-sm-4 col-xs-4">
-                                    <div class="image-wrap entry">
-                                        <img src="upload/single_shop_02.jpg" alt="" class="img-responsive">
-                                        <div class="magnifier">
-                                            <a rel="prettyPhoto[inline]" href="upload/single_shop_02.jpg" title=""><i class="flaticon-add"></i></a>
-                                        </div>
-                                    </div><!-- end image-wrap -->
-                                </div>
-
-                                <div class="col-md-4 col-sm-4 col-xs-4">
-                                    <div class="image-wrap entry">
-                                        <img src="upload/single_shop_03.jpg" alt="" class="img-responsive">
-                                        <div class="magnifier">
-                                            <a rel="prettyPhoto[inline]" href="upload/single_shop_03.jpg" title=""><i class="flaticon-add"></i></a>
-                                        </div>
-                                    </div><!-- end image-wrap -->
-                                </div>
-
-                                <div class="col-md-4 col-sm-4 col-xs-4">
-                                    <div class="image-wrap entry">
-                                        <img src="upload/single_shop_04.jpg" alt="" class="img-responsive">
-                                        <div class="magnifier">
-                                            <a rel="prettyPhoto[inline]" href="upload/single_shop_04.jpg" title=""><i class="flaticon-add"></i></a>
-                                        </div>
-                                    </div><!-- end image-wrap -->
-                                </div>
-                            </div><!-- end row -->
+                            
                         </div><!-- end col -->
 
                         <div class="col-md-6">
