--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="assets/venobox/venobox.css">
     <link rel="stylesheet" href="style.css">
 
 	<!--[if lt IE 9]>
@@ -165,21 +166,21 @@
                     </div><!-- end row -->
                 </div>
             </div>
-            <a href="#about-us">
+            <a href="#exploreus">
                 <div class="slider-bottom">
                     <span>Explore <i class="fa fa-angle-down"></i></span>
                 </div>
             </a>
         </section>
 
-        <section class="section" id="about-us">
+<!--         <section class="section" id="about-us">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 hidden-sm hidden-xs">
                         <div class="custom-module">
                             <img src="upload/device_01.png" alt="" class="img-responsive wow slideInLeft">
-                        </div><!-- end module -->
-                    </div><!-- end col -->
+                        </div>
+                    </div>
                     <div class="col-md-8">
                         <div class="custom-module p40l">
                             <h2>We are a passionate <mark>Product Architecture</mark> from<br>
@@ -198,8 +199,8 @@
                                         <li>Unlimited Shortcodes</li>
                                         <li>Responsive Theme</li>
                                         <li>Tons of Layouts</li>
-                                    </ul><!-- end check -->
-                                </div><!-- end col-lg-4 -->
+                                    </ul>
+                                </div> 
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                     <ul class="check">
                                         <li>Font Awesome Icons</li>
@@ -207,8 +208,8 @@
                                         <li>AJAX Transitions</li>
                                         <li>High Quality Support</li>
                                         <li>Unlimited Options</li>
-                                    </ul><!-- end check -->    
-                                </div><!-- end col-lg-4 -->
+                                    </ul>    
+                                </div> 
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 last">
                                     <ul class="check">
                                         <li>Shopping Layouts</li>
@@ -216,9 +217,9 @@
                                         <li>Style Changers</li>
                                         <li>Footer Styles</li>
                                         <li>Header Styles</li>
-                                    </ul><!-- end check -->
-                                </div><!-- end col-lg-4 --> 
-                            </div><!-- end row -->   
+                                    </ul>
+                                </div>
+                            </div>   
 
                             <hr class="invis">
 
@@ -226,16 +227,16 @@
                                 <a href="aboutus.html" class="btn btn-primary">Learn More About us</a>
                             </div>
 
-                        </div><!-- end module -->
-                    </div><!-- end col -->
-                </div><!-- end row -->
-            </div><!-- end container -->
-        </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
 
 
 
 
-        <section class="section db p120">
+        <section class="section db p120" id="exploreus">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -252,8 +253,9 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="box m30">
-                            <i class="flaticon-computer-tool-for-education"></i>
-                            <h4>Learning system</h4>
+                            <!-- <i class="flaticon-computer-tool-for-education"></i> -->
+                            <img src="images/img/icons/laptop-logo.png" style="max-width: 50px;">
+                            <h4>Project Development</h4>
                             <p>All sections required for online training are included to Spark Tech.</p>
                             <!-- <a href="#" class="readmore">Read more</a> -->
                         </div>
@@ -261,8 +263,9 @@
 
                     <div class="col-md-6">
                         <div class="box m30">
-                            <i class="flaticon-monitor-tablet-and-smartohone"></i>
-                            <h4>Works all mobile devices</h4>
+                            <!-- <i class="flaticon-monitor-tablet-and-smartohone"></i> -->
+                            <img src="images/img/icons/internship.png" style="max-width: 50px;">
+                            <h4>Internships</h4>
                             <p>The most important feature of this template is that it is compatible with all mobile devices. Your customers can also visit your site easily from tablets and phones.</p>
                             <!-- <a href="#" class="readmore">Read more</a> -->
                         </div>
@@ -270,8 +273,9 @@
 
                     <div class="col-md-3">
                         <div class="box m30">
-                            <i class="flaticon-download-business-statistics-symbol-of-a-graphic"></i>
-                            <h4>User Dashboard</h4>
+                            <!-- <i class="flaticon-download-business-statistics-symbol-of-a-graphic"></i> -->
+                            <img src="images/img/icons/workshop.png" style="max-width: 50px;">
+                            <h4>Workshop</h4>
                             <p>We designed the design of all the sub-pages needed for the users.</p>
                             <!-- <a href="#" class="readmore">Read more</a> -->
                         </div>
@@ -283,8 +287,9 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="box">
-                            <i class="flaticon-html5"></i> <i class="flaticon-css-3"></i>
-                            <h4>Compatible HTML5 & CSS3</h4>
+                            <!-- <i class="flaticon-html5"></i> <i class="flaticon-css-3"></i> -->
+                            <img src="images/img/icons/certificate.png" style="max-width: 50px;">
+                            <h4>Certification</h4>
                             <p>HTML5 is a markup language used for structuring and presenting content on the World Wide Web. It is the fifth and current version of the HTML standard.</p>
                             <!-- <a href="#" class="readmore">Read more</a> -->
                         </div>
@@ -292,8 +297,9 @@
 
                     <div class="col-md-6">
                         <div class="box">
-                            <i class="flaticon-html-coding"></i>
-                            <h4>Bootstrap Framework</h4>
+                            <!-- <i class="flaticon-html-coding"></i> -->
+                            <img src="images/img/icons/video-tutorial.png" style="max-width: 50px;">
+                            <h4>Tutorials</h4>
                             <p>Bootstrap is a technique of loading a program into a computer by means of a few initial instructions which enable the introduction of the rest of the program from an input device.</p>
                             <!-- <a href="#" class="readmore">Read more</a> -->
                         </div>
@@ -305,7 +311,7 @@
 
 
 
-<section class="features3 our-services-home" id="features17-1k" data-rv-view="9451">
+<!-- <section class="features3 our-services-home" id="features17-1k" data-rv-view="9451">
     <div class="container-fluid">
         <div class="media-container-row">
             <div class="section-title text-center">
@@ -392,7 +398,7 @@
             
         </div>
     </div>
-</section>
+</section> -->
 
 
 
@@ -445,9 +451,9 @@
                     <div class="caro-item">
                         <div class="course-box">
                             <div class="image-wrap entry">
-                                <img src="upload/course_01.jpg" alt="" class="img-responsive">
+                                <img src="images/img/proj-4.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
-                                     <a href="#" title=""><i class="flaticon-add"></i></a>
+                                     <a href="images/img/proj-4.jpg" data-gall="portfolioGallery" class="venobox" title="Project"><i class="flaticon-add"></i></a>
                                 </div>
                             </div><!-- end image-wrap -->
                             <div class="course-details">
@@ -464,9 +470,9 @@
                     <div class="caro-item">
                         <div class="course-box">
                             <div class="image-wrap entry">
-                                <img src="upload/course_02.jpg" alt="" class="img-responsive">
+                                <img src="images/img/proj-1.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
-                                     <a href="#" title=""><i class="flaticon-add"></i></a>
+                                     <a href="images/img/proj-1.jpg" data-gall="portfolioGallery" class="venobox" title="Project"><i class="flaticon-add"></i></a>
                                 </div>
                             </div><!-- end image-wrap -->
                             <div class="course-details">
@@ -483,9 +489,9 @@
                     <div class="caro-item">
                         <div class="course-box">
                             <div class="image-wrap entry">
-                                <img src="upload/course_03.jpg" alt="" class="img-responsive">
+                                <img src="images/img/proj-3.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
-                                     <a href="#" title=""><i class="flaticon-add"></i></a>
+                                     <a href="images/img/proj-3.jpg" data-gall="portfolioGallery" class="venobox" title="Project"><i class="flaticon-add"></i></a>
                                 </div>
                             </div><!-- end image-wrap -->
                             <div class="course-details">
@@ -502,9 +508,9 @@
                     <div class="caro-item">
                         <div class="course-box">
                             <div class="image-wrap entry">
-                                <img src="upload/course_04.jpg" alt="" class="img-responsive">
+                                <img src="images/img/proj-4.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
-                                     <a href="#" title=""><i class="flaticon-add"></i></a>
+                                     <a href="images/img/proj-4.jpg" data-gall="portfolioGallery" class="venobox" title="Project"><i class="flaticon-add"></i></a>
                                 </div>
                             </div><!-- end image-wrap -->
                             <div class="course-details">
@@ -521,9 +527,9 @@
                     <div class="caro-item">
                         <div class="course-box">
                             <div class="image-wrap entry">
-                                <img src="upload/course_01.jpg" alt="" class="img-responsive">
+                                <img src="images/img/proj-2.jpg" alt="" class="img-responsive">
                                 <div class="magnifier">
-                                     <a href="#" title=""><i class="flaticon-add"></i></a>
+                                     <a href="images/img/proj-2.jpg" data-gall="portfolioGallery" class="venobox" title="Project"><i class="flaticon-add"></i></a>
                                 </div>
                             </div><!-- end image-wrap -->
                             <div class="course-details">
@@ -771,9 +777,15 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/carousel.js"></script>
     <script src="js/animate.js"></script>
+    <script src="assets/venobox/venobox.js"></script>
     <script src="js/custom.js"></script>
     <!-- VIDEO BG PLUGINS -->
     <script src="js/videobg.js"></script>
+    <script>
+        $(window).on('load', function() {
+            $('.venobox').venobox();
+        });
+    </script>
 
 </body>
 </html>
